objects/Location.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_in_Field_Service_Inventory_Flows__c</fullName>
        <formula>AND(
 IsInventoryLocation = TRUE,
OR(
 ISPICKVAL(LocationType,&quot;Warehouse&quot;),
 ISPICKVAL(LocationType,&quot;Remote Parts Depot&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display in Field Service Inventory Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GP_Location_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GP Location Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Parent_Warehouse_for_Remote_Dpt</fullName>
        <active>true</active>
        <description>This Validation Rule ensures that the Parent Warehouse field is populated for all Warehouse records with a type of &quot;Remote Parts Depot.&quot;</description>
        <errorConditionFormula>AND(
 TEXT(LocationType) = &quot;Remote Parts Depot&quot;,
ISBLANK( ParentLocationId ))</errorConditionFormula>
        <errorMessage>Because this record has a Type of &quot;Remote Parts Depot,&quot; you must populate the Parent Warehouse field, which represents the warehouse which gets restocked if a tech uses a part from this Remote Parts Depot.</errorMessage>
    </validationRules>
</CustomObject>